--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -7,32 +7,75 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display:block;
+    text-align:center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos{
+    display:none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres{
+    position:relative;
+    left:200px;
+    top:100px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
 
-
+#ejercicioCuatro{
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: 1000;
+    
+}
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 
 /* Ejercicio 6. */
+#ejercicioCinco{
+    flex-direction: row-reverse;
+}
+
+#ejercicioSiete{
+    width: 600px;
+    text-align: center;
+    display:grid;
+    grid-template-columns:repeat(4, 25%);
+    grid-template-rows: repeat(4,25%); 
+}
+
+#elementoDos{
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+
+#elementoTres{
+    grid-row: 3/4;
+    grid-column: 3/4;
+}
+
+#elementoCuatro{
+    grid-row: 4/5;
+    grid-column: 4/5;
+}
